<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".view.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:contentDescription="@string/cd_story_app"/>

    <com.dicoding.storyapp.view.login.LoginEditText
        android:id="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name" />

    <com.dicoding.storyapp.view.login.LoginEditText
        android:id="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email" />

    <com.dicoding.storyapp.view.login.LoginEditText
        android:id="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password" />

    <TextView
        android:id="@+id/tv_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        android:text="@string/show_password" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/btn_switch_show_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintStart_toEndOf="@+id/tv_show_password"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/tv_switch_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/login" />

    <com.dicoding.storyapp.view.login.LoginRegisterToggleText
        android:id="@+id/tv_switch_to_register"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:text="@string/i_dont_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>