<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_item_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="18sp"
        android:textColor="@color/bg"
        android:maxLines="1"
        android:ellipsize="end"
        app:fontFamily="@font/poppins_semi_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/name"/>

    <TextView
        android:id="@+id/tv_item_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        android:textColor="@color/bg"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/username"/>

    <ImageView
        android:id="@+id/img_item_story"
        app:layout_constraintTop_toBottomOf="@id/tv_item_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/story_photo"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_item_story"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/bg"
        android:textSize="14sp"
        tools:text="@string/description" />

</androidx.constraintlayout.widget.ConstraintLayout>